pages/main.css
:root {
    --bg: #ffffff;
    --bg-2: #f7f7f8;
    --bg-3: #ebebef;
    --bg-4: #d1d1db;
    --bg-5: #a9a9bc;
    --bg-6: #8a8aa3;
    --bg-7: #6c6c89;
    --bg-8: #55556d;
    --bg-9: #3f3f50;
    --bg-10: #282833;
    --bg-11: #121217;
    --black: #000000;
    --fg: #282833;
	--fg-2: #55556d;
    --fg-3: #8a8aa3;
	--border: #d1d1db;
    --fade: #0001;

	--accent: #1d9d74;
	--fg-accent: #b0ddce;
	--bg-accent: #1fa67a;
	--border-accent: #1b926c;

	--red: #f3164e;
	--orange: #ff7d52;
	--yellow: #ffc233;
	--green: #2dca72;
    --blue: #00acff;
	--purple: #7047eb;
	--pink: #f75fde;
	--bg-red: #fff2ee;
	--bg-green: #eefbf4;
	--bg-blue: #dbf3ff;
}

/* Generic */

html,
body {
    color: var(--fg);
    background: var(--bg);
    height: 100%;
    width: 100%;
    margin: 0;
    font-family: "Roboto", Arial, sans-serif;
    font-size: 15px;
}

h1, h2, h3 {
    /* font-family: "Roboto Slab", Arial, sans-serif; */
    font-weight: 500;
    margin: 0;
}

h1 { font-size: 2rem; }
h2 { font-size: 1.25rem; }
h3 { font-size: 1.25rem; }
h4 { font-size: 0.9rem; }
h4, p { 
	margin: 0.25rem 0; 
	font-weight: 400;
}
p {	
	color: var(--fg-3); 
	margin-bottom: 1rem;
}

i { color: var(--fg); }
h2 i { font-size: 1.25rem; }
button i { font-size: 0.7rem; }

button {
    background: none;
    color: var(--fg);
    padding: 8px 10px;
    cursor: pointer;
    font-family: inherit;
	font-weight: 500;
    border: 1px solid var(--border);
    border-radius: 5px;
}

button.assignment-button {
	justify-content: center;
	width: 100%;
	border: none;
	color: var(--fg-3)
}

button.assignment-button:hover {
	text-decoration: underline;
}

input {
	all: unset;
	width: calc(100% - 20px);
	font-size: 0.9rem;
	padding: 10px;
	margin-bottom: 0.5rem;
    border: 1px solid var(--border);
	border-radius: 5px;
}

input:focus {
	border-color: var(--blue);
}

input[type=number] {
	height: 1rem;
	width: 2.5rem;
}

/* Header */

header {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	padding: 50px 200px 2rem 200px;
}

.tab-bar {
	display: flex;
	flex-direction: row;
	margin: 0;
	margin-bottom: 2rem;
	padding: 0px 200px 0px 200px;
	border-bottom: 1px solid var(--border);
}

.tab-bar button {
	color: var(--fg-3);
	display: block;
    padding: 4px 12px;
	border: 0px solid var(--fg);
	border-radius: 0;
	transition: all 0.1s linear;
}

.tab-bar button.active,
.tab-bar button:hover {
	color: var(--fg);
}

.tab-bar button.active {
	border-bottom: 2px solid var(--fg);
}

.tab-bar div { 
	font-weight: 500;
	display: block;
	padding: 4px 12px; 
}

.tab-bar div,
.tab-bar i { 
	color: var(--fg-3);
	font-size: 0.9rem; 
}

/* Dashboard */

.content {
	background: var(--bg);
	padding: 0 200px 50px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 20px;
}

.content > * { width: 100%; }

.content #assignments {
	flex: 2;
}

.content .summary {
	flex: 1;
	margin: 0px 10px;
	display: flex;
	flex-direction: column;
	margin-bottom: auto;
}

.row {
	width: 100%;
	display: flex;
	flex-direction: row;
	gap: 20px;
}

.column {
	display: flex;
	flex-direction: column;
}

@media only screen and (max-width: 1000px) {
	header,
	.content { 
		padding-left: 20px;
		padding-right: 20px; 
	}

	.tab-bar {
		padding-left: 20px;
		padding-right: 20px; 
	}
}

/* Popup */

.popup {
	width: 300px;
	display: flex;
    flex-direction: column;
    gap: var(--margin-2);
    background: var(--bg);
    border: 1px solid var(--border);
	margin: 0px;
    padding: 0px;
	overflow: hidden;
}

.popup-highlight {
	display: flex;
    flex-direction: column;
	padding: 10px;
}

.popup-section {
	display: flex;
    flex-direction: column;
	padding: 10px;
}

.popup-scrollable {
	margin-top: 0.5rem;
	overflow-y: auto;
	max-height: 400px;
	scrollbar-color: var(--fg-3) var(--fade);
}

.popup-row {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
	gap: 10px;
}

.popup h2 { text-align: center; }

/* Assignments */

.assignment {
	display: flex;
	flex-direction: row;
	text-decoration: none;
	color: inherit;
	margin-bottom: 10px;
	border-radius: 5px;
	background: none;
	transition: background 0.1s;
}

.assignment .color {
	color: var(--fg);
	border-radius: 5px 0 0 5px;
	text-align: center;
}

.assignment .color h4 {
	background: var(--bg);
	min-width: 150px;
	/* margin: 20px 0 20px 0; */
}

.assignment .group {
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.assignment .group i {
	width: 1rem;
	margin-right: 0.1rem;
}

.assignment .item {
	all: unset;
	padding: 10px;
	padding-left: 20px;
	border-right: 1px solid var(--border);
}

.assignment .item:first-child {
	border-top: 1px solid var(--border);
	border-top-right-radius: 5px;
}

.assignment .item:last-child {
	border-bottom: 1px solid var(--border);
	border-bottom-right-radius: 5px;
}

.assignment .item:hover { background: var(--bg-2); }
.assignment .info {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	color: var(--fg-3);
	margin-left: 1.3rem;
}

.assignment .info p {
	margin: 0;
}

.old-assignment { display: none; }

.breakline {
	background: none;
	height: 5px;
	margin: 2rem 0;
	border-bottom: 1px solid var(--border);
}

/* Classes */

.class {
	display: flex;
	flex-direction: row;
	gap: 5px;
	margin-bottom: 2rem;
}

.class-content {
	width: 100%;
}


#classes-list > .class:last-child,
#classes-list > .class:last-child div:first-child > div:last-child > input {
	margin-bottom: 0;
}

.title {
	width: 100%;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
}

.title p {
	font-size: 1rem;
	color: var(--fg-3);
	margin: 0;
}

.delete {
	height: 2rem;
	width: 2rem;
	margin: 0 10px;
	background: var(--bg-red);
	justify-content: center;
	align-items: center;
	display: flex;
	border: 1px solid var(--red);
	border-radius: 5px;
	transition: 0.2s;
}

i.incomplete,
.delete i { color: var(--red); }
.delete:hover { transform: scale(0.9, 0.9); }

.add {
	height: 2rem;
	width: 2rem;
	margin: 0 10px;
	background: var(--bg-green);
	justify-content: center;
	align-items: center;
	display: flex;
	border: 1px solid var(--accent);
	border-radius: 5px;
	transition: 0.2s;
}

i.complete,
.add i { color: var(--accent); }
.add:hover { transform: scale(0.9, 0.9); }

.color-box {
    width: 35px;
    height: 100%;
    aspect-ratio: 1 / 1;
    display: flex;
    align-items: center;
    justify-content: center;
	padding: 3px;
    border: 1px solid var(--border);
	border-radius: 5px;
}

.color-box > * {
    width: 100%;
    height: 100%;
    border-radius: 3px;
}

/* Import */

.import-box {
    width: 100%;
    /* max-width: 400px; */
    height: 200px;
    border: 2px dashed var(--border);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 16px;
    color: var(--fg-2);
    cursor: pointer;
    transition: border-color 0.3s ease;
}

.import-box:hover {
    border-color: var(--blue);
}

.import-box input {
	display: none;
}

.save-button {
    color: white;
    background: var(--blue);
	border-color: var(--blue);
    font-size: 14px;
    text-align: center;
    margin-top: 10px;
    padding: 8px 16px;
    border-radius: 5px;
    cursor: pointer;
}

.save-button i {
	color: var(--bg);
    margin-right: 5px;
}

.save-button:hover {
    background-color: var(--blue);
}

.save-button[disabled] {
	background: var(--bg);
	border: 1px solid var(--border);
	cursor: not-allowed;
}

.save-button[disabled],
.save-button[disabled] i {
	color: var(--fg-3);
}

